[package]
name = "terravista-ffi"
description = "C/Swift/Kotlin FFI bindings for the TerraVista mobile map SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
terravista-core = { workspace = true }
